    - COD::CIF::Data::Check:
        - the check_unquoted_strings() subroutine.
    - cif_cod_check:
        - the '--check-unquoted-strings' option.
    - cif_molecule:
        - copying '_chemical_name_common', '_chemical_name_systematic' and
          '_chemical_name_mineral' CIF data items from input files to output.
    - dependency installer for Fedora 37.
  * Fixed:
    - cif_symop_apply:
        - updated the handling of atomic coordinates with standard uncertainties
          to no longer generate warnings.
    - COD::CIF::DDL::DDLm::Validate:
        - a typo in a validation message reporting 'datetime' content type
          violations.
  * Removed:
    - dependency installer for Fedora 35.

cod-tools (3.7.0)

  * Added:
    - cif_filter:
        - the '--estimate-space-group' option as an alias for
          the '--estimate-spacegroup' option.
        - the '--keep-unrecognised-space-groups' option as an alias for
          the '--keep-unrecognised-spacegroups' option.
  * Changed:
    - COD::CIF::Data:
        - updated the lookup_space_group() subroutine to also strip leading
          and trailing whitespace symbols when constructing lookup keys.
        - updated the get_space_group_number() subroutine to report symmetry
          operation lists that do not correspond to a known space group.
        - updated the get_space_group_number() subroutine to report space
          group number values that are not integers in the range of [1, 230].
        - added several more alternative space group data names in
          the space_group_data_names() subroutine.
        - updated the get_sg_data() subroutine to also report space group
          information mismatches even when one of the values is a CIF special
          value.
    - COD::CIF::Data::CIF2COD:
        - updated the cif2cod() subroutine to only output the space group IT
          number that is explicitly provided instead of trying to infer it from
          the symmetry operation list.