@@ -1,0 +1,8 @@
+x,y,z
+1/2+y,1/2+x,-z
+1/2-y,x,z
+-x,1/2+y,-z
+1/2-x,1/2-y,z
+-y,-x,-z
+y,1/2-x,z
+1/2+x,-y,-z
