@@ -1,0 +1,8 @@
+x,y,z
+1/2+x,1/2+y,z
+-x,y,-z
+1/2-x,1/2+y,-z
+x,-y,1/2-z
+1/2+x,1/2-y,1/2-z
+-x,-y,1/2+z
+1/2-x,1/2-y,1/2+z
