@@ -1,0 +1,4 @@
+x,y,z
+1/2-x,1/2+y,1/2-z
+1/2+x,-y,-z
+-x,1/2-y,1/2+z
