@@ -1,0 +1,34 @@
+nrepreset: 8
+representatives:
+    x,y,z
+    y+0.5,x+0.5,-z
+    -y+0.5,x,z
+    x+0.5,-y,-z
+    -x+0.5,-y+0.5,z
+    -y,-x,-z
+    y,-x+0.5,z
+    -x,y+0.5,-z
+nsymops:   8
+symops:
+    x,y,z
+    y+0.5,x+0.5,-z
+    -y+0.5,x,z
+    x+0.5,-y,-z
+    -x+0.5,-y+0.5,z
+    -y,-x,-z
+    y,-x+0.5,z
+    -x,y+0.5,-z
+inversion: 0
+centering: 0,0,0 
+{
+   "constraints" => "$a == $b && $alpha == 90 && $beta == 90 && $gamma == 90",
+   "crystal_class" => "tetragonal",
+   "hall" => "P 4ab 2ab (x+1/4,y-1/4,z)",
+   "hermann_mauguin" => "P 4 21 2",
+   "ncsym" => [ "x,y,z", "1/2+y,1/2+x,-z", "1/2-y,x,z", "-x,1/2+y,-z", "1/2-x,1/2-y,z", "-y,-x,-z", "y,1/2-x,z", "1/2+x,-y,-z" ],
+   "number" => "90",
+   "schoenflies" => "D4^2",
+   "symops" => [ "x,y,z", "1/2+y,1/2+x,-z", "1/2-y,x,z", "-x,1/2+y,-z", "1/2-x,1/2-y,z", "-y,-x,-z", "y,1/2-x,z", "1/2+x,-y,-z" ],
+   "universal_h_m" => "P 4 21 2 (a-1/4,b+1/4,c)",
+},
+#-------------------------
