@@ -1,0 +1,30 @@
+nrepreset: 4
+representatives:
+    x,y,z
+    -x,y,-z
+    x,-y,-z+0.5
+    -x,-y,z+0.5
+nsymops:   8
+symops:
+    x,y,z
+    -x,y,-z
+    x,-y,-z+0.5
+    -x,-y,z+0.5
+    x+0.5,y+0.5,z
+    -x+0.5,y+0.5,-z
+    x+0.5,-y+0.5,-z+0.5
+    -x+0.5,-y+0.5,z+0.5
+inversion: 0
+centering: 0,0,0 0.5,0.5,0 
+{
+   "constraints" => "$alpha == 90 && $beta == 90 && $gamma == 90",
+   "crystal_class" => "orthorhombic",
+   "hall" => "C 2c 2 (x,y,z-1/4)",
+   "hermann_mauguin" => "C 2 2 21",
+   "ncsym" => [ "x,y,z", "-x,y,-z", "x,-y,1/2-z", "-x,-y,1/2+z" ],
+   "number" => "20",
+   "schoenflies" => "D2^5",
+   "symops" => [ "x,y,z", "1/2+x,1/2+y,z", "-x,y,-z", "1/2-x,1/2+y,-z", "x,-y,1/2-z", "1/2+x,1/2-y,1/2-z", "-x,-y,1/2+z", "1/2-x,1/2-y,1/2+z" ],
+   "universal_h_m" => "C 2 2 21 (a,b,c+1/4)",
+},
+#-------------------------
