@@ -1,0 +1,26 @@
+nrepreset: 4
+representatives:
+    x,y,z
+    -x+0.5,y+0.5,-z+0.5
+    x+0.5,-y,-z
+    -x,-y+0.5,z+0.5
+nsymops:   4
+symops:
+    x,y,z
+    -x+0.5,y+0.5,-z+0.5
+    x+0.5,-y,-z
+    -x,-y+0.5,z+0.5
+inversion: 0
+centering: 0,0,0 
+{
+   "constraints" => "$alpha == 90 && $beta == 90 && $gamma == 90",
+   "crystal_class" => "orthorhombic",
+   "hall" => "P 2ac 2ab (x-1/4,y+1/4,z)",
+   "hermann_mauguin" => "P 21 21 21",
+   "ncsym" => [ "x,y,z", "1/2-x,1/2+y,1/2-z", "1/2+x,-y,-z", "-x,1/2-y,1/2+z" ],
+   "number" => "19",
+   "schoenflies" => "D2^4",
+   "symops" => [ "x,y,z", "1/2-x,1/2+y,1/2-z", "1/2+x,-y,-z", "-x,1/2-y,1/2+z" ],
+   "universal_h_m" => "P 21 21 21 (a+1/4,b-1/4,c)",
+},
+#-------------------------
