@@ -234,3 +234,6 @@ P 1 n 1 (a,b+1/4,c)
 P 1 21/m 1 (a,b-1/4,c)
 C -4 2 b
 F 41/a d c
+P 4 21 2 (a-1/4,b+1/4,c)
+C 2 2 21 (a,b,c+1/4)
+P 21 21 21 (a+1/4,b-1/4,c)
