@@ -12,6 +12,12 @@ cod-tools (unreleased)
         - copying '_chemical_name_common', '_chemical_name_systematic' and
           '_chemical_name_mineral' CIF data items from input files to output.
     - dependency installer for Fedora 37.
+    - COD::Spacegroups::Lookup::COD:
+	- added three more non-standard settings:
+	  - H-M symbols: 'P 4 21 2 (a-1/4,b+1/4,c)', 'C 2 2 21 (a,b,c+1/4)',
+	                 'P 21 21 21 (a+1/4,b-1/4,c)'
+	  - Hall symbols: 'P 4ab 2ab (x+1/4,y-1/4,z)', 'C 2c 2 (x,y,z-1/4)',
+	                  'P 2ac 2ab (x-1/4,y+1/4,z)'.
   * Fixed:
     - cif_symop_apply:
         - updated the handling of atomic coordinates with standard uncertainties
